# safe-containers

./: .clang-format  .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  HACKING.md  LICENSE  README.md  vcpkg.json
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
include/safe-containers/: error.h  macros.h  safe-containers.hpp  type_traits.h  vector.h
include/safe-containers/result/: result.h  result_config.h  result_ext.h
test/: CMakeLists.txt
test/source/: fail_alloc.h  safe-containers_test.cpp  test_result_ext.cpp  test_vector.cpp
